<?xml version="1.0"?>
<package>
  <name>ecl_maps</name>
  <version>0.50.0</version>
  <description>
    These establish some c++ style containers for maps
    used in robotic navigation.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/ecl_maps</url>
  <url type="repository">https://github.com/stonier/ecl_core</url>
  <url type="bugtracker">https://github.com/stonier/ecl_core/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author> -->

  <build_depend>catkin</build_depend>
  <build_depend>ecl_license</build_depend>
  <build_depend>ecl_exceptions</build_depend>
  <build_depend>ecl_formatters</build_depend>
  <build_depend>ecl_linear_algebra</build_depend>
  
  <run_depend>ecl_exceptions</run_depend>
  <run_depend>ecl_formatters</run_depend>
  <run_depend>ecl_linear_algebra</run_depend>
</package>


