<?xml version="1.0"?>
<package>
  <name>ecl_navigation_apps</name>
  <version>0.50.0</version>
  <description>
     This includes a suite of programs demo'ing various aspects of the
     ecl_navigation. It also includes various benchmarking and utility programs for
     use primarily with embedded systems.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/ecl_navigation_apps</url>
  <url type="repository">https://github.com/stonier/ecl_core</url>
  <url type="bugtracker">https://github.com/stonier/ecl_core/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author> -->

  <build_depend>catkin</build_depend>
  <build_depend>ecl_license</build_depend>
  <build_depend>ecl_formatters</build_depend>
  <build_depend>ecl_slam</build_depend>
  <build_depend>ecl_utilities</build_depend>
  
  <run_depend>ecl_formatters</run_depend>
  <run_depend>ecl_slam</run_depend>
  <run_depend>ecl_utilities</run_depend>
</package>


