<?xml version="1.0"?>
<package>
  <name>ecl_slam</name>
  <version>0.50.3</version>
  <description>
    Slam structures and mechanisms for various algorithms. A level of 
    genericity is the focus here - where elements are common to many
    slam algorithms, they're pulled into this package library.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/ecl_slam</url>
  <url type="repository">https://github.com/stonier/ecl_navigation</url>
  <url type="bugtracker">https://github.com/stonier/ecl_navigation/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ecl_license</build_depend>
  <build_depend>ecl_exceptions</build_depend>
  <build_depend>ecl_time</build_depend>
  <build_depend>ecl_linear_algebra</build_depend>
  
  <run_depend>ecl_license</run_depend>
  <run_depend>ecl_exceptions</run_depend>
  <run_depend>ecl_time</run_depend>
  <run_depend>ecl_linear_algebra</run_depend>
</package>


