###############################################################################
# Subdirectories
###############################################################################

message(STATUS "******************** src ********************")

#add_subdirectory(benchmarks)
add_subdirectory(demos)
#add_subdirectory(utils)
